fix title and scrollbar in storage info

--- a/Web/Beskar.CodeAnalytics.Dashboard/Components/Pages/StorageInfo.razor.css
+++ b/Web/Beskar.CodeAnalytics.Dashboard/Components/Pages/StorageInfo.razor.css
@@ -1,6 +1,9 @@
 ﻿
 .storage {
     padding: 20px;
+    width: 100svw;
+    height: calc(100svh - var(--nav-height));
+    overflow: auto;
 }
 
 .total {
